# lifetime-maintenance

./: .env.dynamic  .env.example  .eslintcache  .eslintignore  .eslintrc.js  .gitignore  ACI_INTEGRATION_GUIDE.md  ACI_INTEGRATION_SUMMARY.md  AGENT_ARCHITECTURE_PLAN.md  AGENT_SETUP_GUIDE.md  AGENT_SYSTEM_READY.md  AI_INTEGRATION_SUCCESS_SUMMARY.md  BANK_MEETING_CHECKLIST.md  CIMCO_QR_CODES_PRINT.html  CIMCO_QUICK_START.md  CIMCO_REBRAND_GUIDE.md  CLAUDE_SUBAGENTS_INTEGRATION.md  COPILOT_GUIDE.md  Cargo.toml  DEMO_RECORDING_GUIDE.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_APPROACH.md  DUAL_AI_SYSTEMS_IMPLEMENTATION.md  DUAL_TRACK_PROGRESS.md  DYNAMIC_PORTS_GUIDE.md  DYNAMIC_PORTS_IMPLEMENTATION.md  ENHANCED_AI_INTEGRATION_SUMMARY.md  FASTAPI_DEBUGGING_ISSUE.md  FASTAPI_PYDANTIC_FIX_GUIDE.md  FINAL_READY_STATUS.md  FITNESS_MAINTENANCE_FOCUS.md  GITHUB_TOOLS_GUIDE.md  HYBRID_ARCHITECTURE_GUIDE.md  HYBRID_SETUP_COMPLETE.md  IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  KNOWLEDGE_MANAGEMENT_SETUP.md  MIGRATION_COMPLETE.md  N8N_AI_AGENT_GUIDE.md  N8N_CLOUD_SETUP.md  (+100 more)
.claude/: settings.local.json
.copilot/: settings.json
.cursor/: mcp.json
.storybook/: main.js
.taskmaster/: config.json  state.json
assets/: AITraining-CYrSrlwL.js  AITraining-CYrSrlwL.js.map  AdvancedAnalytics-tesAbOOb.js  AdvancedAnalytics-tesAbOOb.js.map  Dashboard-Bc5tFynW.css  Dashboard-DQbWuYCt.js  Dashboard-DQbWuYCt.js.map  DemoMode-DH1GdSlw.js  (+53 more)
backend-rs/: Cargo.toml  demo_seed.sql
backend-rs/migrations/: 20240101000000_initial_schema.sql  20240101000001_add_indexes.sql  20240101000002_add_photo_indexes.sql
backend-rs/src/: ai.rs  db.rs  error.rs  handlers.rs  handlers_test.rs  main.rs  models.rs
cimco/: .env.example  CIMCO_INVENTORY_PRD.md  Cargo.toml  DAD_INVESTMENT_PITCH.md  DEMO_MODE_GUIDE.md  DEMO_SCRIPT.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  DIY_TRACKER_BUILD_GUIDE.md  EXECUTIVE_WALKTHROUGH.md  GET_100_DOLLARS_FAST.md  GITHUB_PAGES_GUIDE.md  HANDOVER_INSTRUCTIONS.md  IMPLEMENTATION_SUMMARY.md  INDUSTRIAL_TRACKER_GUIDE.md  MASTER_PLAN.md  OSI_Cost_of_Stupid_UPDATED.docx  OSI_Demo_Script_UPDATED.docx  PERFECT_SECURITY_ACHIEVED.md  PRE_LAUNCH_SECURITY_AUDIT.md  README.md  RUST_ARCHITECTURE.md  SALES_DEMO_GUIDE.md  SECURITY_FIXES_IMPLEMENTED.md  SIMPLE_DAD_ASK.md  SUPABASE_SETUP_GUIDE.md  TELEMATICS_GUIDE.md  TRACKER_SHOPPING_LIST.md  Trunk.toml  UI_POLISH_VERIFICATION.md  VERIFICATION_REPORT_ACTUAL.md  index.html  input.css  metso_parts.xlsx  navigation_test.html  package-lock.json  package.json  run.sh  setup_styles.sh  style.css  (+3 more)
cimco/.cursor/: mcp.json
cimco/database/: cimco_seed.sql  complete-setup.sql  gamification-schema.sql  gamification-seed.sql  schema-enhanced.sql  schema-inventory.sql  schema-trackers.sql  schema.sql  seed_full.sql  seed_live_parts.sql  seed_metso.sql
cimco/public/: qr-codes.html
cimco/scripts/: ingest_data.py  read_docx.py
cimco/src/: App.css  App.jsx  api.rs  app.rs  generated_datasets.rs  industrial-theme.css  main.rs  showcase.rs
cimco/src-tauri/: .taurignore  Cargo.toml  cimco_offline.db.bak  tauri.conf.json
cimco/src-tauri/capabilities/: default.json
cimco/src-tauri/src/: auth.rs  commands.rs  db.rs  db_seeds.rs  db_sqlite_backup.rs  db_tests.rs  hardware.rs  main.rs  server.rs  tests.rs
cimco/src-tauri/src/data/: initial_parts.json
cimco/src/components/: EquipmentDetail.jsx  EquipmentList.jsx  LanguageSelector.jsx  MaintenanceLogForm.jsx  OperatorMode.jsx  QRScanner.jsx  SplashScreen.jsx  UsageAnalytics.jsx  VoiceRecorder.jsx  camera.rs  chart.rs  dashboard.rs  equipment_list.rs  inventory.rs  login.rs  logs.rs  mod.rs  roi_calculator.rs  scale.rs  system_map.rs  tasks.rs  voice_input.rs
cimco/src/components/common/: LoadingSpinner.jsx  Toast.jsx
cimco/src/components/gamification/: UserProfile.jsx
cimco/src/context/: LanguageContext.jsx
cimco/src/hooks/: useFavorites.js  useUserProfile.js  useWakeLock.js
cimco/src/lib/: supabase.js
cimco/src/utils/: constants.js  exportUtils.js  mockData.js
cimco/src_react_backup/: App.css  App.jsx  index.css  main.jsx
cimco/src_react_backup/components/: AboutCimco.jsx  EquipmentDetail.jsx  EquipmentList.jsx  ExportButton.jsx  MaintenanceLogForm.jsx  SplashScreen.css  TelematicsCard.jsx
cimco/src_react_backup/components/common/: FloatingActionButton.jsx
cimco/src_react_backup/components/gamification/: Leaderboard.jsx
cimco/src_react_backup/context/: ToastContext.jsx
cimco/src_react_backup/hooks/: useEquipmentStats.js  useLeaderboard.js  useUserProfile.js
cimco/src_react_backup/lib/: supabase.js
cimco/src_react_backup/utils/: localStorage.js  mockData.js  translations.js
(+306 files in other folders)
