[package]
name = "cimco-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
plotters = "0.3"
plotters-canvas = "0.3"
rand = "0.8"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlInputElement", "Window", "Document", "Storage", "Blob", "Url", "HtmlAnchorElement", "HtmlElement", "Request", "RequestInit", "RequestMode", "Response", "Headers"] }
js-sys = "0.3.83"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
