[package]
name = "cimco-app"
version = "0.1.0"
description = "Cimco Resources Equipment Tracker"
authors = ["Cimco Resources"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nokhwa = { version = "0.10", features = ["input-v4l"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
deadpool-postgres = "0.12"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
csv = "1.4.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]
