[package]
name = "cimco-app"
version = "0.1.0"
description = "Cimco Resources Equipment Tracker"
authors = ["Cimco Resources"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nokhwa = { version = "0.10", features = ["input-v4l"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
deadpool-postgres = "0.12"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
csv = "1.4.0"
argon2 = "0.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[dev-dependencies]
tempfile = "3.8"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]

[dependencies.axum]
version = "0.7"

[dependencies.tower]
version = "0.4"

[dependencies.tower-http]
version = "0.5"
features = ["cors", "fs"]

[[bin]]
name = "cimco-app"
path = "src/main.rs"

[[bin]]
name = "cimco-server"
path = "src/server.rs"
